Fix scrollbar placement

--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -10,10 +10,11 @@
 
   .nav
     height: 100%
-    position: sticky
+    position: fixed
     left: 0
 
   .content
     width: 100%
     min-height: 100%
     margin: 0 50px
+    margin-left: 200px
